--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-
-
 <head>
+
 </head>
 
 
 <body>
     <div>
-        Hello From Zeeshan
+        Hello World
     </div>
 </body>
 
